--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Visualisation notes IUT Bayonne",
-    "description": "Cette extension permet une meilleurs visualisation des dernières notes sortient sur son relevé de note pour le site iutbayonne.univ-pau.fr. Version test",
+    "description": "Cette extension permet une meilleurs visualisation des dernières notes sur le  relevé de note pour l'intranet de l'IUT de bayonne.",
     "version": "0.1",
-    "permissions": [
-        "tabs"
-    ],
     "action": {
         "default_icon": "icon.png"
     },
